--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "description": "A Free Code Camp Back End project using Node and Express",
   "version": "0.0.1",
   "main": "app.js",
+  "author": "Sean Smith",
   "dependencies": {
     "express": "^4.13.4"
+  },
+  "enines": {
+    "node": "v4.4.5"
   }
 }
