--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "0.0.1",
   "main": "app.js",
   "author": "Sean Smith",
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
     "express": "^4.13.4"
   },
